# excel-compare-tool

./: .gitignore  BUILD_WINDOWS.md  CROSS_COMPILE.md  ExcelCompare.spec  QUICKSTART.md  README.md  build.py  build_win_final.py  build_win_mingw.py  build_win_simple.py  build_windows.bat  build_windows.py  compile_all.py  cross_compile_win.py  nuitka-crash-report.xml  pyproject.toml  test1.xlsx  test2.xlsx
.github/workflows/: build-windows.yml
src/excel_compare/: __init__.py  comparator.py  diff_view.py  main.py
